--- a/packages/common/tsconfig.build.json
+++ b/packages/common/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
     "extends": "../../tsconfig.build.json",
     "compilerOptions": {
-        "outDir": "../../dist/core"
+        "outDir": "../../dist/common"
     },
     "include": ["package.json", "./src/**/*.ts"]
 }
