Adding decorated routing functionality

--- a/packages/example/tsconfig.build.json
+++ b/packages/example/tsconfig.build.json
@@ -3,5 +3,5 @@
     "compilerOptions": {
         "outDir": "../../dist/example"
     },
-    "include": ["package.json", "app/**/*.ts"]
+    "include": ["package.json", "app/**/*.json", "app/**/*.ts"]
 }
