--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-    "$schema": "./packages/cli/src/schema/init-workspace-schema.json",
     "name": "fusion-rx",
     "version": "0.0.1",
     "description": "FusionRx - The modern middleware developer's framework",
@@ -13,6 +12,7 @@
         "build:common": "cd packages/common && npm run build",
         "build:core": "cd packages/core && npm run build",
         "build:node": "cd packages/node && npm run build",
+        "build:compiler": "cd packages/compiler && npm run build",
         "build:example": "cd packages/example && npm run build",
         "serve:example": "node dist/example/app/main.js"
     },
@@ -23,7 +23,8 @@
         "dist/node",
         "dist/cli",
         "dist/core",
-        "dist/test"
+        "dist/test",
+        "dist/compiler"
     ],
     "workspacesConf": {
         "srcRoot": "packages",
@@ -80,14 +81,26 @@
         "@types/vscode": "^1.86.0",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
+        "assert": "^2.1.0",
+        "crypto-browserify": "^3.12.0",
+        "events": "^3.3.0",
+        "https-browserify": "^1.0.0",
         "jest": "^29.7.0",
+        "os-browserify": "^0.3.0",
         "parcel": "^2.11.0",
+        "path-browserify": "^1.0.1",
         "prettier": "^3.0.0",
+        "process": "^0.11.10",
         "source-map-support": "^0.5.21",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
         "ts-jest": "^29.1.1",
         "tsc-alias": "^1.8.5",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.1.3"
+        "tty-browserify": "^0.0.1",
+        "typescript": "^5.1.3",
+        "url": "^0.11.3",
+        "util": "^0.12.5"
     },
     "jest": {
         "moduleFileExtensions": [
