--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -5,9 +5,9 @@
     "author": "Alexander Porrello",
     "license": "MIT",
     "source": "src/public-api.ts",
-    "main": "../../dist/compiler/index.js",
-    "module": "../../dist/compiler/index.mjs",
-    "types": "../../dist/compiler/index.types.d.ts",
+    "main": "./dist/index.js",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.types.d.ts",
     "targets": {
         "main": {
             "context": "node",
@@ -19,32 +19,17 @@
         }
     },
     "scripts": {
-        "postbuild": "node ../../tools/post-build/index.js",
-        "build": "npx parcel build && npm run postbuild",
+        "build": "npx tsc -p tsconfig.json",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage"
     },
     "dependencies": {
-        "chalk": "^4.1.2",
-        "qs": "^6.11.2",
-        "reflect-metadata": "^0.1.13",
+        "@parcel/core": "^2.12.0",
+        "@parcel/packager-ts": "^2.11.0",
+        "@parcel/transformer-typescript-tsc": "^2.11.0",
+        "@parcel/transformer-typescript-types": "^2.11.0",
         "rxjs": "^7.5.0",
         "typescript": "^5.1.3"
-    },
-    "devDependencies": {
-        "@types/qs": "^6.9.10"
-    },
-    "exports": {
-        "./package.json": {
-            "default": "./package.json"
-        },
-        ".": {
-            "node": "./index.js",
-            "esm2020": "./index.mjs",
-            "es2020": "./index.mjs",
-            "types": "./index.types.d.ts",
-            "default": "./index.js"
-        }
     }
 }
