--- a/packages/compiler/tsconfig.json
+++ b/packages/compiler/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "outDir": "../../dist/core"
+        "outDir": "../../dist/compiler"
     },
     "include": ["package.json", "src/**/*.ts"],
-    "exclude": ["../../dist/*"]
+    "exclude": ["node_modules"]
 }
