--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "description": "FusionRx - The modern middleware developer's framework",
     "author": "Alexander Porrello",
     "license": "MIT",
-    "type": "module",
     "scripts": {
         "build": "npm run build:core && npm run build:node && npm run build:nest && npm run build:config",
         "build:cli": "cd packages/cli && npm run build",
@@ -19,55 +18,21 @@
     "outDir": "dist",
     "workspaces": [
         "dist/shared",
-        "dist/common",
-        "dist/node",
-        "dist/cli",
-        "dist/core",
+        "dist/compiler",
         "dist/test",
-        "dist/compiler"
+        "dist/core",
+        "dist/common"
     ],
-    "workspacesConf": {
-        "srcRoot": "packages",
-        "outDir": "dist",
-        "projects": [
-            {
-                "source": "cli",
-                "buildCommand": "npm run build:cli",
-                "buildFrom": "root"
-            },
-            {
-                "source": "common",
-                "buildCommand": "npm run build:common",
-                "buildFrom": "root"
-            },
-            {
-                "source": "node",
-                "buildCommand": "npm run build:node",
-                "buildFrom": "root"
-            },
-            {
-                "source": "nest",
-                "buildCommand": "npm run build:nest",
-                "buildFrom": "root"
-            },
-            {
-                "source": "config",
-                "buildCommand": "npm run build:config",
-                "buildFrom": "root"
-            },
-            {
-                "source": "test",
-                "buildComman": "npm run build",
-                "buildFrom": "project"
-            }
-        ]
-    },
     "dependencies": {
+        "babel-loader": "^9.1.3",
+        "chalk": "^5.3.0",
         "express": "^4.18.3",
         "node-fetch": "^3.3.2",
         "ora": "5.4.1",
         "reflect-metadata": "^0.1.13",
-        "rxjs": "^7.5.0"
+        "rxjs": "^7.5.0",
+        "webpack": "^5.91.0",
+        "webpack-node-externals": "^3.0.0"
     },
     "devDependencies": {
         "@parcel/packager-ts": "^2.11.0",
@@ -79,6 +44,8 @@
         "@types/node": "^18.19.15",
         "@types/node-fetch": "^2.6.11",
         "@types/vscode": "^1.86.0",
+        "@types/webpack": "^5.28.5",
+        "@types/webpack-node-externals": "^3.0.4",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
         "assert": "^2.1.0",
