--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,23 +4,9 @@
     "description": "Provides core functionality for FusionRx packages.",
     "author": "Alexander Porrello",
     "license": "MIT",
-    "source": "src/public-api.ts",
-    "main": "../../dist/core/index.js",
-    "module": "../../dist/core/index.mjs",
-    "types": "../../dist/core/index.types.d.ts",
-    "targets": {
-        "main": {
-            "context": "node",
-            "outputFormat": "commonjs"
-        },
-        "module": {
-            "context": "browser",
-            "outputFormat": "esmodule"
-        }
-    },
+    "main": "public-api.js",
     "scripts": {
-        "postbuild": "node ../../tools/post-build/index.js",
-        "build": "npx parcel build && npm run postbuild",
+        "build": "npx parcel build",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage"
@@ -32,17 +18,5 @@
     },
     "devDependencies": {
         "@types/qs": "^6.9.10"
-    },
-    "exports": {
-        "./package.json": {
-            "default": "./package.json"
-        },
-        ".": {
-            "node": "./index.js",
-            "esm2020": "./index.mjs",
-            "es2020": "./index.mjs",
-            "types": "./index.types.d.ts",
-            "default": "./index.js"
-        }
     }
 }
