Fixed bugs with resolving for projects.

--- a/packages/example/tsconfig.app.json
+++ b/packages/example/tsconfig.app.json
@@ -1,8 +1,7 @@
 {
-    "extends": "../../tsconfig.json",
+    "extends": "../../tsconfig.build.json",
     "compilerOptions": {
-        "outDir": "dist",
-        "isolatedModules": true
+        "outDir": "../../dist/example"
     },
-    "include": ["app/**/*.ts"]
+    "include": ["package.json", "app/**/*.json", "app/**/*.ts"]
 }
