Updating application bootstrap

--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -3,6 +3,6 @@
     "compilerOptions": {
         "outDir": "../../dist/core"
     },
-    "include": ["package.json", "src/**/*.ts"],
-    "exclude": ["../../dist/*"]
+    "include": ["src/**/*.ts"],
+    "exclude": ["../../dist"]
 }
