--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "dependencies": {
         "babel-loader": "^9.1.3",
         "chalk": "^5.3.0",
+        "concurrently": "^8.2.2",
         "express": "^4.18.3",
         "node-fetch": "^3.3.2",
         "ora": "5.4.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.5.0",
+        "ts-morph": "^22.0.0",
         "webpack": "^5.91.0",
         "webpack-node-externals": "^3.0.0"
     },
@@ -39,6 +41,7 @@
         "@parcel/transformer-typescript-tsc": "^2.11.0",
         "@parcel/transformer-typescript-types": "^2.11.0",
         "@types/chokidar": "^2.1.3",
+        "@types/concurrently": "^7.0.0",
         "@types/express": "^4.17.21",
         "@types/jest": "^29.5.5",
         "@types/node": "^18.19.15",
