--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -5,24 +5,8 @@
     "description": "An example Fusion application.",
     "author": "Alexander Porrello",
     "license": "MIT",
-    "source": "app/main.ts",
-    "main": "../../dist/example/index.js",
-    "module": "../../dist/example/index.mjs",
-    "types": "../../dist/example/index.types.d.ts",
-    "targets": {
-        "main": {
-            "context": "node",
-            "outputFormat": "commonjs"
-        },
-        "module": {
-            "context": "browser",
-            "outputFormat": "esmodule"
-        }
-    },
     "scripts": {
-        "build": "npx tsc -p tsconfig.build.json",
-        "postbuild:parcel": "node ../../tools/post-build/index.js",
-        "build:parcel": "npx parcel build && npm run postbuild",
+        "build": "npx tsc -p tsconfig.app.json",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage"
