--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "lib": ["es2020"],
         "incremental": true,
         "types": ["reflect-metadata", "jest", "node"],
-        "baseUrl": "tools/packages",
+        "baseUrl": "packages",
         "declaration": true,
         "declarationMap": true,
         "sourceMap": true,
@@ -35,5 +35,5 @@
         "resolveJsonModule": true,
         "isolatedModules": true
     },
-    "exclude": ["./dist"]
+    "exclude": ["./dist/*"]
 }
