--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -3,6 +3,5 @@
     "compilerOptions": {
         "outDir": "../../dist/core"
     },
-    "include": ["package.json", "src/**/*.ts"],
-    "exclude": ["../../dist/*"]
+    "include": ["src/**/*.ts"]
 }
