--- a/packages/core/tsconfig.build.json
+++ b/packages/core/tsconfig.build.json
@@ -1,9 +1,7 @@
 {
     "extends": "../../tsconfig.build.json",
     "compilerOptions": {
-        "outDir": "../../dist/core",
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
-    },
-    "include": ["package.json", "src/public-api.ts", "src/**/*.ts"]
+        "sourceRoot": "src",
+        "outDir": "../../dist/core"
+    }
 }
