--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "webpack-node-externals": "^3.0.0"
     },
     "devDependencies": {
+        "@fusion-rx/cli": "^0.1.0",
         "@parcel/packager-ts": "^2.11.0",
         "@parcel/transformer-typescript-tsc": "^2.11.0",
         "@parcel/transformer-typescript-types": "^2.11.0",
