--- a/packages/shared/tsconfig.build.json
+++ b/packages/shared/tsconfig.build.json
@@ -2,6 +2,11 @@
     "extends": "../../tsconfig.build.json",
     "compilerOptions": {
         "sourceRoot": "src",
-        "outDir": "../../dist/shared"
+        "outDir": "../../dist/shared",
+        "target": "es2017",
+        "lib": [
+            "es2020"
+        ],
+        "module": "NodeNext"
     }
 }
