Moved to module, implemented express module.

--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -4,6 +4,10 @@
         "outDir": "../../dist/core",
         "rootDir": "."
     },
-    "include": ["src/**/*.ts"],
-    "exclude": ["../../dist"]
+    "include": [
+        "src/**/*.ts"
+    ],
+    "exclude": [
+        "../../dist"
+    ]
 }
